--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Artifical Emotions (AE)</title>
-    <script defer src="https://1rz6q.sse.codesandbox.io/dist/face-api.min.js"></script>
+    
+    Reenie Beanie, Pangolin, Indie Flower
 	</head>
 	<body>
 		
